--- a/crewup-nextjs/package.json
+++ b/crewup-nextjs/package.json
@@ -16,6 +16,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@googlemaps/js-api-loader": "^2.0.2",
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.88.0",
     "@tanstack/react-query": "^5.90.12",
@@ -26,6 +27,7 @@
     "react-dom": "^19.2.3",
     "stripe": "^20.1.0",
     "tailwind-merge": "^3.4.0",
+    "use-places-autocomplete": "^4.0.1",
     "zod": "^4.2.1",
     "zustand": "^5.0.9"
   },
@@ -45,6 +47,7 @@
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.18",
     "typescript": "^5.9.3",
+    "vercel": "^50.1.2",
     "vitest": "^4.0.16"
   }
 }
