feat: integrate MDX support and update configuration
- Added support for MDX files by integrating @next/mdx and updating page extensions in next.config.ts.
- Updated Tailwind CSS configuration to include the typography plugin for enhanced text styling.
- Modified package.json and package-lock.json to include new dependencies for MDX and typography.
- Enhanced TypeScript configuration to include additional type definitions for MDX.
- Updated analytics tests to include new metrics functions for subscription and operational load.

This update improves content flexibility and styling options across the application.

--- a/package.json
+++ b/package.json
@@ -33,11 +33,15 @@
     "@dotenvx/dotenvx": "^1.51.2",
     "@googlemaps/js-api-loader": "^2.0.2",
     "@hookform/resolvers": "^5.2.2",
+    "@mdx-js/loader": "^3.1.1",
+    "@mdx-js/react": "^3.1.1",
+    "@next/mdx": "^16.1.1",
     "@sentry/nextjs": "^10.32.1",
     "@sentry/profiling-node": "^10.32.1",
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.88.0",
     "@tanstack/react-query": "^5.90.12",
+    "@types/mdx": "^2.0.13",
     "@vercel/analytics": "^1.6.1",
     "browser-image-compression": "^2.0.2",
     "clsx": "^2.1.1",
@@ -49,6 +53,7 @@
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "react-hook-form": "^7.69.0",
+    "react-markdown": "^10.1.0",
     "recharts": "^3.6.0",
     "resend": "^6.6.0",
     "stripe": "^20.1.0",
@@ -64,6 +69,7 @@
     "@playwright/experimental-ct-react": "^1.57.0",
     "@playwright/test": "^1.57.0",
     "@tailwindcss/postcss": "^4.1.18",
+    "@tailwindcss/typography": "^0.5.19",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.1",
     "@testing-library/user-event": "^14.6.1",
