--- a/package.json
+++ b/package.json
@@ -30,6 +30,9 @@
   "license": "ISC",
   "dependencies": {
     "@capacitor/android": "^8.0.0",
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@dotenvx/dotenvx": "^1.51.2",
     "@googlemaps/js-api-loader": "^2.0.2",
     "@hookform/resolvers": "^5.2.2",
